<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/rb"
        android:title="@string/menu_room_behavior">
        <menu>
            <item
                android:id="@+id/rb_update_room"
                android:title="@string/menu_room_update" />
            <item
                android:id="@+id/rb_delete_room"
                android:title="@string/menu_room_delete" />
<!--            <item-->
<!--                android:id="@+id/rb_coppy_room"-->
<!--                android:title="@string/menu_room_make_coppy" />-->
        </menu>
    </item>

    <item
        android:id="@+id/pb"
        android:title="@string/menu_people_behavior">
        <menu>
<!--            <item-->
<!--                android:id="@+id/pb_update_people"-->
<!--                android:title="@string/menu_people_update" />-->
            <item
                android:id="@+id/pb_change_people"
                android:title="@string/menu_people_change" />
            <item
                android:id="@+id/pb_delete_people"
                android:title="@string/menu_people_delete_people" />
            <item
                android:id="@+id/pb_delete_all_people"
                android:title="@string/menu_people_delete_all_people" />
        </menu>

    </item>

    <item
        android:id="@+id/lb"
        android:title="@string/menu_legal_behavior">
        <menu>
            <item
                android:id="@+id/lb_create_temporary"
                android:title="@string/menu_item_create_temporary" />
            <item
                android:id="@+id/lb_extend_temporary"
                android:title="@string/menu_item_extend_temporary" />
            <item
                android:id="@+id/lb_delete_temporary"
                android:title="@string/menu_item_delete_temporary" />
        </menu>
    </item>

</menu>