<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/detail_person_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:cardCornerRadius="40dp">

            <ImageView
                android:id="@+id/detail_person_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/adult"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/big_gap"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/detail_person_validate_status"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/big_text"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:text="@string/detail_people_validate"
                />

            <TextView
                android:id="@+id/detail_person_validate_date"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/big_text"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:text="@string/detail_people_validate_date"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/detail_person_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/medium_text"
        android:text="@string/detail_people_role_main_house"
        android:layout_marginHorizontal="@dimen/large_gap"
        android:layout_marginTop="@dimen/big_gap"
        app:layout_constraintTop_toBottomOf="@id/detail_person_header"/>

    <TextView
        android:id="@+id/detail_person_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/medium_text"
        android:layout_marginTop="@dimen/small_gap"
        android:layout_marginHorizontal="@dimen/large_gap"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/form_birth"
        app:layout_constraintTop_toBottomOf="@id/detail_person_role"/>

    <TextView
        android:id="@+id/detail_person_identification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/medium_text"
        android:layout_marginTop="@dimen/small_gap"
        android:layout_marginHorizontal="@dimen/large_gap"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/form_identification"
        app:layout_constraintTop_toBottomOf="@id/detail_person_birthday"/>

    <TextView
        android:id="@+id/detail_person_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/medium_text"
        android:layout_marginTop="@dimen/small_gap"
        android:layout_marginHorizontal="@dimen/large_gap"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/form_phone"
        app:layout_constraintTop_toBottomOf="@id/detail_person_identification"/>

    <TextView
        android:id="@+id/detail_person_deposit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/medium_text"
        android:layout_marginTop="@dimen/small_gap"
        android:layout_marginHorizontal="@dimen/large_gap"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/detail_people_deposit"
        app:layout_constraintTop_toBottomOf="@id/detail_person_phoneNumber"/>

    <TextView
        android:id="@+id/detail_person_rent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/medium_text"
        android:layout_marginTop="@dimen/small_gap"
        android:layout_marginHorizontal="@dimen/large_gap"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/detail_people_pay_date"
        app:layout_constraintTop_toBottomOf="@id/detail_person_deposit"/>

    <TextView
        android:id="@+id/detail_person_permanent_resident"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/small_gap"
        android:textSize="@dimen/medium_text"
        android:layout_marginHorizontal="@dimen/large_gap"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/form_permanent_resident"
        app:layout_constraintTop_toBottomOf="@id/detail_person_rent"/>


</androidx.constraintlayout.widget.ConstraintLayout>