<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Screen.UpdateRoomInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_gap"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/large_gap"
                android:layout_marginBottom="@dimen/medium_gap">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bts_edt_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/update_room_info_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_room_toolbar">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/empty_room_graffiti"/>

                <TextView
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/big_text"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/detail_people_empty_rental"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/tremendous_gap"
                android:layout_marginBottom="@dimen/tremendous_gap" />
        </LinearLayout>

    </ScrollView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large_gap"
        android:layout_marginBottom="@dimen/large_gap"
        app:cardCornerRadius="@dimen/medium_corner_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fitsSystemWindows="true"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/button_finish"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>